[#376] FIX SNMP monitoring config (#381)